@@ -1,72 +1,6 @@
 require File.dirname(__FILE__) + '/../../spec_helper.rb'
 
-module Spec
-  module Fixtures
-    class Animal
-      def initialize(name,species)
-        @name,@species = name,species
-      end
+# TODO Need some way of speccing diff's Spec::Expectations::Should::Base extension
+# TODO    The hook is explicitly turned off with the RSPEC_TESTING guard under "dogfood" specs
+# TODO    The code is covered because the spec running these specs has --diff and the diff-hook switched on.
 
-      def inspect
-        <<-EOA
-<Animal
-  name=#{@name},
-  species=#{@species}
->
-        EOA
-      end
-    end
-  end
-end
-
-context "Diff" do
-  specify "should output unified diff of two strings" do
-    expected="foo\nbar\nzap\nthis\nis\nsoo\nvery\nvery\nequal\ninsert\na\nline\n"
-    actual="foo\nzap\nbar\nthis\nis\nsoo\nvery\nvery\nequal\ninsert\na\nanother\nline\n"
-    expected_diff="\n\n@@ -1,6 +1,6 @@\n foo\n-bar\n zap\n+bar\n this\n is\n soo\n@@ -9,5 +9,6 @@\n equal\n insert\n a\n+another\n line\n"
-    diff=Spec::Expectations::Should::Base.new.diff_as_string(expected, actual)
-    diff.should_eql(expected_diff)
-  end
-
-  specify "should output unified diff message of two arrays" do
-    expected = [ :foo, 'bar', :baz, 'quux', :metasyntactic, 'variable', :delta, 'charlie', :width, 'quite wide' ]
-    actual   = [ :foo, 'bar', :baz, 'quux', :metasyntactic, 'variable', :delta, 'tango'  , :width, 'very wide'  ]
-
-    expected_diff = <<'EOD'
-
-
-@@ -5,7 +5,7 @@
-  :metasyntactic,
-  "variable",
-  :delta,
-- "charlie",
-+ "tango",
-  :width,
-- "quite wide"]
-+ "very wide"]
-EOD
-
-
-    diff = Spec::Expectations::Should::Base.new.diff_as_object(expected,actual)
-    diff.should_eql expected_diff
-  end
-
-  specify "should output unified diff message of two objects" do
-    expected = Spec::Fixtures::Animal.new "bob", "giraffe"
-    actual   = Spec::Fixtures::Animal.new "bob", "tortoise"
-
-    expected_diff = <<'EOD'
-
-@@ -1,5 +1,5 @@
- <Animal
-   name=bob,
--  species=giraffe
-+  species=tortoise
- >
-EOD
-
-    diff = Spec::Expectations::Should::Base.new.diff_as_object(expected,actual)
-    diff.should_eql expected_diff
-  end
-
-end
